# composer-parser

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  backtester.py  composer_parser.py  debug_log.txt  pyproject.toml  quantmage-source  requirements.txt  setup.py  symphony copy.json  symphony.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows_disabled/: ci.yml.disabled
composer-copy-trader/: message.txt
composer_parser/: README.md  __init__.py  api.py  composer_parser.py  lisp_parser.py  quantmage_parser.py  symphony_scanner.py  version.py
examples/: quantmage_example.py  simple_usage.py
tests/: __init__.py  test_backtester.py  test_parser.py  test_quantmage_parser.py
